# super-tux-showdown

./: Cargo.toml  README.md
.cargo/: config.toml
client/: Cargo.toml
client/assets/models/: stk-tux.glb  tux.stsmodel
client/src/: data.rs  debug.rs  input.rs  main.rs
common/: Cargo.toml
common/src/: anim.rs  lib.rs
common/src/anim/: names.rs
frame-tool/: Cargo.toml
frame-tool/src/: anim.rs  main.rs
