[package]
name = "super-tux-showdown-frame-tool"
version = "0.1.0"
edition.workspace = true

[dependencies]
super-tux-showdown-common.workspace = true

bevy = "0.18.1"
rfd = "0.17.2"
log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
tracing = { version = "0.1", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_egui = "0.39.1"
crossbeam-channel = "0.5.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
dev = ["bevy/bevy_remote", "bevy/bevy_dev_tools"]

[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[package.metadata.bevy_cli.native.dev]
features = ["dev"]
